[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["vsedov <viv.sedov@hotmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.2.2"
more-itertools = "^9.0.0"
icecream = "^2.1.3"
taskipy = "^1.10.3"


[tool.poetry.dev-dependencies]
yapf = "*"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
ruff = "^0.0.149"

[tool.isort]
known_first_party = ["aoc_cj"]
line_length = 150

[tool.ruff]
line-length = 150


[tool.pytest.ini_options]
# skip slow tests by default
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow"
]
xfail_strict=true

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
isort = "isort ."
freeze = "poetry export -f requirements.txt > requirements.txt --without-hashes"

[tool.pycln]
all = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
align_closing_bracket_with_visual_indent = "False"
allow_multiline_dictionary_keys = "True"
allow_multiline_lambdas = "False"
allow_split_before_default_or_named_assigns="False"
allow_split_before_dict_value="False"
arithmetic_precedence_indication="True"
blank_lines_around_top_level_definition="2"
# blank_lines_between_top_level_imports_and_variables="2"
blank_line_before_class_docstring="False"
blank_line_before_module_docstring="False"
blank_line_before_nested_class_or_def="True"
coalesce_brackets="True"
column_limit="120"
continuation_align_style="SPACE"
continuation_indent_width="4"
dedent_closing_brackets="False"
disable_ending_comma_heuristic="True"
each_dict_entry_on_separate_line="True"
force_multiline_dict="True"
i18n_comment="#\\..*"
i18n_function_call="N_, _"
indent_closing_brackets="False"
indent_dictionary_value="True"
indent_width="4"
join_multiple_lines="True"
no_spaces_around_selected_binary_operators="False"
spaces_around_default_or_named_assign="False"
spaces_around_dict_delimiters="False"
spaces_around_list_delimiters="False"
spaces_around_power_operator="False"
spaces_around_subscript_colon="False"
spaces_around_tuple_delimiters="False"
spaces_before_comment="2"
space_between_ending_comma_and_closing_bracket="False"
space_inside_brackets="False"
split_all_comma_separated_values="False"
split_arguments_when_comma_terminated="True"
split_before_bitwise_operator="True"
split_before_closing_bracket="True"
split_before_dict_set_generator="True"
split_before_dot="True"
split_before_expression_after_opening_paren="True"
split_before_first_argument="True"
split_before_logical_operator="True"
split_before_named_assigns="True"
split_complex_comprehension="True"
split_penalty_after_opening_bracket="300"
split_penalty_after_unary_operator="10000"
split_penalty_arithmetic_operator="300"
split_penalty_before_if_expr="0"
split_penalty_bitwise_operator="300"
split_penalty_comprehension="2100"
split_penalty_excess_character="7000"
split_penalty_for_added_line_split="30"
# split_penalty_import_names="0"
split_penalty_logical_operator="300"
use_tabs="False"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."adventofcode.user"]
vsedov = "src.aoc_cj:solve"
