[project]
name = "aoc"
version = "0.1.0"
authors = [
    { name = "viv sedov", email = "viv.sedov@hotmail.com" },
]
dependencies = [
    "advent-of-code-data>=2.0.1",
    "more-itertools>=10.1.0",
    "numpy>=1.26.2",
    "z3-solver>=4.12.4",
    "lark>=1.1.8",
    "networkx>=3.2.1",
    "aocd>=0.1",
    "icecream>=2.1.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/vsedov/advent-of-code"

[project.entry-points."adventofcode.user"]
src = "src:sovle"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "types-networkx>=3.2.1.20240813",
    "pre-commit>=3.8.0",
]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_also = [
    'if __name__ == "__main__":',
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
    '@abc\.abstractmethod',
    'assert False',
    'assert_never\(.*\)',
]

[tool.ruff]
line-length = 120
target-version = "py38" # FIXME: replace w/ project.requires-python - https://docs.astral.sh/ruff/settings/#target-version
output-format = "grouped"
src = [
    "src",
    # "test",
]

[tool.ruff.lint]
select = [ # https://docs.astral.sh/ruff/rules/ # TODO: enable additional linter rules
    # "F", # Pyflakes
    "F401", # unused-import
    # "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    # TODO: evaluate flake8 rules
    "ERA",
    # "PL", # pylint
    # "FURB", #refurb
    "RUF", # ruff
]

[tool.pytest.ini_options]
# skip slow tests by default
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow",
]
xfail_strict = true


strict = true

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = true
enable_error_code = [ # https://mypy.readthedocs.io/en/stable/error_code_list2.html#error-codes-optional
    'redundant-self',
    'redundant-expr',
    'possibly-undefined',
    'truthy-bool',
    'truthy-iterable',
    'ignore-without-code',
    'unused-awaitable',
    'unused-ignore',
    'explicit-override',
    'unimported-reveal',
]
implicit_reexport = true
strict_equality = true

# Configuring error messages
show_column_numbers = true
pretty = true

# Miscellaneous
warn_unused_configs = true

[[tool.mypy.overrides]]
# aocd doesn't provide types https://github.com/wimglenn/advent-of-code-data/issues/78
module = ['aocd']
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
